# pynari

./: .gitignore  Benchmarks.md  README.md  benchmark.py  pyproject.toml
.github/workflows/: test.yml
pynari/: __init__.py  _impls.py  inspections.py  model.py
pynarist/: __init__.py  _errors.py  _impls.py  inspections.py  model.py
tests/: test_errorformat.py  test_impl.py  test_model.py
